@@ -3,6 +3,8 @@ Released on 2019-10-20?
 ======================================
 
 
+bpo-32411: Stop sorting dict created with desired line order.
+
 bpo-37038: Make idlelib.run runnable; add test clause.
 
 bpo-36958: Print any argument other than None or int passed to
